--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="DescInfo">QuickMaths a été réalisé dans le cadre d’un devoir étudiant à l’IUT d’Amiens par Bastien Durand et Maxime Boulenger, en deuxième année de BUT Informatique.C’est un simple jeu de calcul mental.</string>
     <string name="DescAccueil">Exercez-vous au calcul mental</string>
     <string name="DescJeu">Résout le plus de calcul possible</string>
+    <string name="InputText">Résultat...</string>
+    <string name="Loose">Vous avez atteint un score de 18 points !</string>
+    <string name="BackHomeButton">Accueil</string>
 </resources>
